# Phoenix-Project

./: .gitignore  LICENSE  Pipfile  Readme.md  main.py  phoenix.spec  pyproject.toml  requirements.txt
Phoenix-Project/: phoenix.py
src/: __init__.py  phoenix.py
