[tool.poetry]
name = "phoenix-project"
version = "0.2"
description = "Simple GUI for automate deleting videos"
authors = ["Sirius-Bell <vlad10game@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "phoenix_project"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.2"
PySimpleGUI = "^4.60.4"
loguru = "^0.7.0"

[tool.poetry.group.dev.dependencies]
pyinstaller = {version = "^5.8.0", python = ">=3.11,<3.12"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
